minor fixes and updates

--- a/cv.tex
+++ b/cv.tex
@@ -130,14 +130,14 @@
           \resumeItem{Selected as one of the \textbf{POSTECH's Representative Research Achievements} (2021)}
           \resumeItem{Received \textbf{Outstanding Online Class award} (2020) and \textbf{the Best EduTech award} (2021)}
           \resumeItem{3D scene reconstruction, understanding, and assembly projects}
-          \resumeItem{Proposed novel image generation pipelines: \textbf{StudioGAN} project (2.3k GitHub stars)}
-          \resumeItem{4.0k Google Scholar citations (as of Dec. 2021)}
+          \resumeItem{Proposed novel image generation pipelines: \textbf{StudioGAN} project (2.4k GitHub stars)}
+          \resumeItem{4.3k Google Scholar citations}
         \resumeItemListEnd
     \resumeSubheading
       {Staff Research Scientist}{Santa Clara, CA, USA}
       {Intelligent Systems Lab, Intel (Manager: Dr. Vladlen Koltun)}{Dec. 2015 -- March 2019}
         \resumeItemListStart
-          \resumeItem{\textbf{Co-founder of Open3D}: open-sourced 3D vision library, built from scratch (5.8k GitHub stars)}
+          \resumeItem{\textbf{Co-founder of Open3D}: open-sourced 3D vision library, built from scratch (6.0k GitHub stars)}
           \resumeItem{Tanks and Temples: an online evaluation system for photogrametry methods}
           \resumeItem{High quality 3D reconstruction approaches}
           \resumeItem{Geometry understanding: tangent convolutions and fully convolutional geometric features}
@@ -333,24 +333,25 @@ Domestic
 
 \section{Talks}
 \resumeItemListStart
-    \resumeItem{On overview of recent 3D vision methods, Harvard University, Boston, MA, USA (online), June 2022}
-    \resumeItem{Self-Calibrating Neural Radiance Fields, DGIST, Daegu, Republic of Korea, Aug. 2021}
-    \resumeItem{Object Detection from Images or Point Clouds, LG Electronics, Seoul, Republic of Korea, Aug. 2021}
-    \resumeItem{Self-Calibrating Neural Radiance Fields, Korea Institute of Science and Technology (KIST), Virtual, June 2021}
-    \resumeItem{Mentor Session: How to Become a Professor, Conference on Computer Vision and Pattern Recognition (CVPR 2021), Virtual, June 2021}
-    \resumeItem{Recent Work on Image Generation, Gwangju Institute of Science and Technology (GIST), Virtual, May 2021}
-    \resumeItem{Point Cloud Registration using Hierachical Hough Transform, 33nd Workshop on Image Processing and Image Understanding (IPIU2021), Virtual, Feb. 2021}
-    \resumeItem{3D Representations and Detections, Chungbuk University, Virtual, Jan. 2021}
-    \resumeItem{Introduction to Computer Vision, Kyungbuk Science High School, Pohang, Republic of Korea, Aug. 2020}
-    \resumeItem{High-Dimensional Convolutional Networks for Geometric Pattern Recognition, KCCV 2020, Seoul, Republic of Korea, Aug. 2020}
-    \resumeItem{Object Detection from Images or Point Clouds, LG Electronics, Seoul, Republic of Korea, Aug. 2020}
-    \resumeItem{Fully Convolutional Geometric Features, Koh Young Technology, Yongin, Republic of Korea, Dec. 2019}
-    \resumeItem{Open3D Tutorial and Fully Convolutional Geometric Features, Korea Electronics Technology Institute, Seongnam, Republic of Korea, Nov. 2019}
-    \resumeItem{Introduction to Computer Vision and Deep Learning, Daegu Science High School, Daegu, Republic of Korea, Aug. 2019}
-    \resumeItem{3D Computer Vision and Open3D, International Conference on Machine Vision Applications, Tokyo, Japan, May 2019}
-    \resumeItem{3D Computer Vision and Open3D, Qualcomm Head Quater, San Diego, USA, June 2019}
-    \resumeItem{3D reconstruction using Open3D, Minneapolis, University of Minnesota, invited lecture for Multiview 3D Geometry in Computer Vision (CSCI 5980) Class, Apr. 2018}
-    \resumeItem{3D reconstruction using Open3D, Forma Technology (a startup company at Bay Area), San Francisco, USA, March 2018}
+    \resumeItem{\textit{On overview of recent 3D vision methods}, Harvard University, Boston, MA, USA (online), June 2022}
+    \resumeItem{\textit{Self-Calibrating Neural Radiance Fields}, Seoul National University, Seoul, Republic of Korea (online), Feb. 2022}
+    \resumeItem{\textit{Self-Calibrating Neural Radiance Fields}, DGIST, Daegu, Republic of Korea, Aug. 2021}
+    \resumeItem{\textit{Object Detection from Images or Point Clouds}, LG Electronics, Seoul, Republic of Korea, Aug. 2021}
+    \resumeItem{\textit{Self-Calibrating Neural Radiance Fields}, Korea Institute of Science and Technology (KIST), Virtual, June 2021}
+    \resumeItem{\textit{Mentor Session: How to Become a Professor}, Conference on Computer Vision and Pattern Recognition (CVPR 2021), Virtual, June 2021}
+    \resumeItem{\textit{Recent Work on Image Generation}, Gwangju Institute of Science and Technology (GIST), Virtual, May 2021}
+    \resumeItem{\textit{Point Cloud Registration using Hierachical Hough Transform}, 33nd Workshop on Image Processing and Image Understanding (IPIU2021), Virtual, Feb. 2021}
+    \resumeItem{\textit{3D Representations and Detections}, Chungbuk University, Virtual, Jan. 2021}
+    \resumeItem{\textit{Introduction to Computer Vision}, Kyungbuk Science High School, Pohang, Republic of Korea, Aug. 2020}
+    \resumeItem{\textit{High-Dimensional Convolutional Networks for Geometric Pattern Recognition}, KCCV 2020, Seoul, Republic of Korea, Aug. 2020}
+    \resumeItem{\textit{Object Detection from Images or Point Clouds}, LG Electronics, Seoul, Republic of Korea, Aug. 2020}
+    \resumeItem{\textit{Fully Convolutional Geometric Features}, Koh Young Technology, Yongin, Republic of Korea, Dec. 2019}
+    \resumeItem{\textit{Open3D Tutorial and Fully Convolutional Geometric Features}, Korea Electronics Technology Institute, Seongnam, Republic of Korea, Nov. 2019}
+    \resumeItem{\textit{Introduction to Computer Vision and Deep Learning}, Daegu Science High School, Daegu, Republic of Korea, Aug. 2019}
+    \resumeItem{\textit{3D Computer Vision and Open3D}, International Conference on Machine Vision Applications, Tokyo, Japan, May 2019}
+    \resumeItem{\textit{3D Computer Vision and Open3D}, Qualcomm Head Quater, San Diego, USA, June 2019}
+    \resumeItem{\textit{3D reconstruction using Open3D}, Minneapolis, University of Minnesota, invited lecture for Multiview 3D Geometry in Computer Vision (CSCI 5980) Class, Apr. 2018}
+    \resumeItem{\textit{3D reconstruction using Open3D}, Forma Technology (a startup company at Bay Area), San Francisco, USA, March 2018}
 \resumeItemListEnd
 
 
