--- a/source/latex/program_committe.tex
+++ b/source/latex/program_committe.tex
@@ -1,5 +1,6 @@
 \section{Program Committee}
 \resumeItemListStart
+    \resumeItem{\textbf{Area Chair}, European Conference on Computer Vision (\textbf{ECCV}),  2022}
     \resumeItem{\textbf{Associate Editor}, IEEE International Conference on Robotics and Automation (\textbf{ICRA}),  2021}
     \resumeItem{\textbf{Associate Editor}, IEEE/RSJ International Conference on Inteligent Robotics and Systems (\textbf{IROS}),  2021}
     \resumeItem{Area Chair, Machine Vision Applications (MVA) conference,  2021}
