--- a/source/latex/publication.tex
+++ b/source/latex/publication.tex
@@ -3,6 +3,7 @@
 International
 \resumePublicationListStart
     \publicationItem{Jaesung Choe, Byeongin Joung, Francois Rameau, \textbf{Jaesik Park}, and In So Kweon}{Deep Point Cloud Reconstruction}{International Conference on Learning Representations (\textbf{ICLR}), 2022}{}
+    \publicationItem{Jungeon Kim, Hyomin Kim, Hyeonseo Nam, \textbf{Jaesik Park}, and Seungyong Lee}{TextureMe: High-quality Textured Scene Reconstruction in Real-time}{ACM Transactions on Graphics (\textbf{ToG}), 2022}{(will be presented at \textbf{SIGGRAPH2022})}
     \publicationItem{Jae Shin Yoon, Zhixuan Yu, \textbf{Jaesik Park}, and Hyun Soo Park}{HUMBI: A Large Multiview Dataset of Human Body Expressions and Benchmark Challenge}{Transactions on Pattern Analysis and Machine Intelligence (\textbf{TPAMI}), 2021}{}
     \publicationItem{Hyunmin Lee and \textbf{Jaesik Park}}{Instance-wise Occlusion and Depth Orders in Natural Scenes}{2111.14562 (arXiv), 2021}{}
     \publicationItem{Chunghyun Park, Yoonwoo Jeong, Minsu Cho, and \textbf{Jaesik Park}}{Fast Point Transformer}{2112.04702 (arXiv), 2021}{}
@@ -10,7 +11,6 @@ International
     \publicationItem{Jaesung Choe*, Chunghyun Park*, Francois Rameau, \textbf{Jaesik Park}, and In So Kweon}{PointMixer: MLP-Mixer for Point Cloud Understanding}{2111.11187 (arXiv), 2021}{(*Equal contribution)}
     \publicationItem{Wei Dong*, Kwonyoung Ryu*, Michael Kaess, and \textbf{Jaesik Park}}{Real-time Registration and Reconstruction with Cylindrical LiDAR Images}{2112.02779 (arXiv), 2021}{(*Equal contribution)}
     \publicationItem{Jinsoo Choi, \textbf{Jaesik Park}, and In So Kweon}{Self-Supervised Real-time Video Stabilization}{British Machine Vision Conference (\textbf{BMVC}), 2021}{}
-    \publicationItem{Jungeon Kim, Hyomin Kim, Hyeonseo Nam, \textbf{Jaesik Park}, and Seungyong Lee}{TextureMe: High-quality Textured Scene Reconstruction in Real-time}{ACM Transactions on Graphics (\textbf{ToG}), 2021}{}
     \publicationItem{Minguk Kang, Woohyeon Shim, Minsu Cho, and \textbf{Jaesik Park}}{Rebooting ACGAN: Auxiliary Classifier GANs with Stable Training}{Conference on Neural Information Processing Systems (\textbf{NeurIPS}), 2021}{}
     \publicationItem{Hyunsoo Chung, Jungtaek Kim, Boris Knyazev, Jinhwi Lee, Graham W. Taylor, \textbf{Jaesik Park}, and Minsu Cho}{Brick-by-Brick: Combinatorial Construction with Deep Reinforcement Learning}{Conference on Neural Information Processing Systems (\textbf{NeurIPS}), 2021}{}
     \publicationItem{Yoonwoo Jeong, Seokjun Ahn, Christopher Choy, Animashree Anandkumar, Minsu Cho, and \textbf{Jaesik Park}}{Self-Calibrating Neural Radiance Fields}{International Conference on Computer Vision (\textbf{ICCV}), 2021}{}
