--- a/source/latex/talks.tex
+++ b/source/latex/talks.tex
@@ -7,11 +7,12 @@
     \resumeItem{\textit{Self-Calibrating Neural Radiance Fields}, Korea Institute of Science and Technology (KIST), Virtual, June 2021}
     \resumeItem{\textit{Mentor Session: How to Become a Professor}, Conference on Computer Vision and Pattern Recognition (CVPR 2021), Virtual, June 2021}
     \resumeItem{\textit{Recent Work on Image Generation}, Gwangju Institute of Science and Technology (GIST), Virtual, May 2021}
-    \resumeItem{\textit{Point Cloud Registration using Hierachical Hough Transform}, 33nd Workshop on Image Processing and Image Understanding (IPIU2021), Virtual, Feb. 2021}
+    \resumeItem{\textit{Point Cloud Registration using Hierachical Hough Transform}, 33rd Workshop on Image Processing and Image Understanding (IPIU2021), Virtual, Feb. 2021}
     \resumeItem{\textit{3D Representations and Detections}, Chungbuk University, Virtual, Jan. 2021}
     \resumeItem{\textit{Introduction to Computer Vision}, Kyungbuk Science High School, Pohang, Republic of Korea, Aug. 2020}
     \resumeItem{\textit{High-Dimensional Convolutional Networks for Geometric Pattern Recognition}, KCCV 2020, Seoul, Republic of Korea, Aug. 2020}
     \resumeItem{\textit{Object Detection from Images or Point Clouds}, LG Electronics, Seoul, Republic of Korea, Aug. 2020}
+    \resumeItem{\textit{Geometric Pattern Recognition}, 32nd Workshop on Image Processing and Image Understanding (IPIU2020), Feb. 2020}
     \resumeItem{\textit{Fully Convolutional Geometric Features}, Koh Young Technology, Yongin, Republic of Korea, Dec. 2019}
     \resumeItem{\textit{Open3D Tutorial and Fully Convolutional Geometric Features}, Korea Electronics Technology Institute, Seongnam, Republic of Korea, Nov. 2019}
     \resumeItem{\textit{Introduction to Computer Vision and Deep Learning}, Daegu Science High School, Daegu, Republic of Korea, Aug. 2019}
