minor updates and adding funding section

--- a/source/latex/publication.tex
+++ b/source/latex/publication.tex
@@ -64,9 +64,9 @@ International
 
 Domestic
 \resumePublicationListStart
-    \publicationItem{and Seokjun Ahn, Jinwhi Lee, Jungtaek Kim, Suhyeon Jeong, Seungwook Kim, \textbf{Jaesik Park}, Minsu Cho}{탐색 알고리즘을 활용한 순차적 조각 조립}{제 34회 영상처리 및 이해에 관한 워크샵 (IPIU), Feb. 2022}{}
-    \publicationItem{and Jaewon Kam, Jungeon Kim, Soongjin Kim, \textbf{Jaesik Park}, Seungyoung Lee}{실내 깊이 완성을 위한 3D 합성곱 기반의 절두체 합성곱}{제 34회 영상처리 및 이해에 관한 워크샵 (IPIU), Feb. 2022}{}
-    \publicationItem{and Wonjun Jin, Soongjin Kim, \textbf{Jaesik Park}, Seungyoung Lee, Sunghyun Cho}{GC-NeRF: 형상 제약을 활용한 효율적인 NeRF 학습}{제 34회 영상처리 및 이해에 관한 워크샵 (IPIU), Feb. 2022}{}
+    \publicationItem{Seokjun Ahn, Jinwhi Lee, Jungtaek Kim, Suhyeon Jeong, Seungwook Kim, \textbf{Jaesik Park}, and Minsu Cho}{탐색 알고리즘을 활용한 순차적 조각 조립}{제 34회 영상처리 및 이해에 관한 워크샵 (IPIU), Feb. 2022}{}
+    \publicationItem{Jaewon Kam, Jungeon Kim, Soongjin Kim, \textbf{Jaesik Park}, and Seungyoung Lee}{실내 깊이 완성을 위한 3D 합성곱 기반의 절두체 합성곱}{제 34회 영상처리 및 이해에 관한 워크샵 (IPIU), Feb. 2022}{}
+    \publicationItem{Wonjun Jin, Soongjin Kim, \textbf{Jaesik Park}, Seungyoung Lee, and Sunghyun Cho}{GC-NeRF: 형상 제약을 활용한 효율적인 NeRF 학습}{제 34회 영상처리 및 이해에 관한 워크샵 (IPIU), Feb. 2022}{}
     \publicationItem{Junha Lee, Seungwook Kim, Minsu Cho, and \textbf{Jaesik Park}}{계층적 허프 변환을 통한 포인트 클라우드 정합}{제 33회 영상처리 및 이해에 관한 워크샵 (IPIU), Feb. 2021}{(\textbf{Received The Gold Prize})}
     \publicationItem{Hyunmin Lee and \textbf{Jaesik Park}}{일관된 비디오 뎁스 맵 추정을 위한 시간 어텐션 모듈}{제 33회 영상처리 및 이해에 관한 워크샵 (IPIU), Feb. 2021}{(\textbf{Received The Silver Prize})}
     \publicationItem{Hyunsoo Chung, Jungtaek Kim, Jinhwi Lee, \textbf{Jaesik Park}, and Minsu Cho}{강화학습을 이용한 그래프 표현 기반의 3차원 물체 생성}{제 33회 영상처리 및 이해에 관한 워크샵 (IPIU), Feb. 2021}{}
