--- a/source/latex/talks.tex
+++ b/source/latex/talks.tex
@@ -1,6 +1,6 @@
 \section{Talks}
 \resumeItemListStart
-    \resumeItem{\textit{On overview of recent 3D vision methods}, Harvard University, Boston, MA, USA (online), June 2022}
+    \resumeItem{\textit{Fast Point Transformer}, Harvard University, Boston, MA, USA (online), June 2022}
     \resumeItem{\textit{Self-Calibrating Neural Radiance Fields}, Seoul National University, Seoul, Republic of Korea (online), Feb. 2022}
     \resumeItem{\textit{Self-Calibrating Neural Radiance Fields}, DGIST, Daegu, Republic of Korea, Aug. 2021}
     \resumeItem{\textit{Object Detection from Images or Point Clouds}, LG Electronics, Seoul, Republic of Korea, Aug. 2021}
