--- a/source/latex/awards.tex
+++ b/source/latex/awards.tex
@@ -1,8 +1,11 @@
 \section{Awards}
 \resumeItemListStart
+    \resumeItem{\textbf{Google Cloud Platform Credit Award}, Google LLC, USA, March 2022}
+    \resumeItem{\textbf{28th HumanTech Paper Award (Silver Prize)}, Samsung Electronics Corp., Feb. 2022}
     \resumeItem{\textbf{Best EduTech Class Award}, POSTECH, \emph{Awarded to the one online class among 480 classes}, Nov. 2021}
     \resumeItem{\textbf{Representative Research Achievements}, POSTECH, July 2021}
     \resumeItem{\textbf{Qualcomm Gift Grant}, Qualcomm Corporation, Dec. 2020}
+    \resumeItem{\textbf{The 16th Samsung EM Paper Contest (Silver Prize)}, Samsung Electro-Mechanics, Dec. 2020}
     \resumeItem{\textbf{Outstanding Online Class}, Awarded to five classes among 170 classes, POSTECH, July 2020}
     \resumeItem{\textbf{Faculty Support Program}, Intel Corporation, June 2020}
     \resumeItem{\textbf{Google Season of Docs}, Google Corporation, \emph{Technical writer support for Open3D}, Apr. 2019}
