--- a/source/latex/publication.tex
+++ b/source/latex/publication.tex
@@ -10,7 +10,7 @@ International
     \publicationItem{Jae Shin Yoon, Zhixuan Yu, \textbf{Jaesik Park}, and Hyun Soo Park}{HUMBI: A Large Multiview Dataset of Human Body Expressions and Benchmark Challenge}{Transactions on Pattern Analysis and Machine Intelligence (\textbf{TPAMI}), 2021}{}
     \publicationItem{Junha Lee, Christopher Choy, and \textbf{Jaesik Park}}{Putting 3D Spatially Sparse Networks on a Diet}{2112.01316 (arXiv), 2021}{}
     \publicationItem{Jaesung Choe*, Chunghyun Park*, Francois Rameau, \textbf{Jaesik Park}, and In So Kweon}{PointMixer: MLP-Mixer for Point Cloud Understanding}{2111.11187 (arXiv), 2021}{(*Equal contribution)}
-    \publicationItem{Wei Dong*, Kwonyoung Ryu*, Michael Kaess, and \textbf{Jaesik Park}}{Real-time Registration and Reconstruction with Cylindrical LiDAR Images}{2112.02779 (arXiv), 2021}{(*Equal contribution)}
+    \publicationItem{Wei Dong*, Kwonyoung Ryu*, Michael Kaess, and \textbf{Jaesik Park}}{Revisiting LiDAR Registration and Reconstruction: A Range Image Perspective}{2112.02779 (arXiv), 2021}{(*Equal contribution)}
     \publicationItem{Jinsoo Choi, \textbf{Jaesik Park}, and In So Kweon}{Self-Supervised Real-time Video Stabilization}{British Machine Vision Conference (\textbf{BMVC}), 2021}{}
     \publicationItem{Minguk Kang, Woohyeon Shim, Minsu Cho, and \textbf{Jaesik Park}}{Rebooting ACGAN: Auxiliary Classifier GANs with Stable Training}{Conference on Neural Information Processing Systems (\textbf{NeurIPS}), 2021}{}
     \publicationItem{Hyunsoo Chung, Jungtaek Kim, Boris Knyazev, Jinhwi Lee, Graham W. Taylor, \textbf{Jaesik Park}, and Minsu Cho}{Brick-by-Brick: Combinatorial Construction with Deep Reinforcement Learning}{Conference on Neural Information Processing Systems (\textbf{NeurIPS}), 2021}{}
