--- a/source/latex/awards.tex
+++ b/source/latex/awards.tex
@@ -1,5 +1,7 @@
 \section{Awards}
 \resumeItemListStart
+    \resumeItem{\textbf{Representative ICT RnD Projects} in Recent Five Years (ICT RnD 사업 성과 중 우수과제), IITP (정보통신기획평가원), Republic of Korea, May 2022}
+    \resumeItem{\textbf{CSE Young Scholar}, POSTECH Computer Science Engineering Department, Apr. 2022}
     \resumeItem{\textbf{Google Cloud Platform Credit Award}, Google LLC, USA, March 2022}
     \resumeItem{\textbf{28th HumanTech Paper Award (Silver Prize)}, Samsung Electronics Corp., Feb. 2022}
     \resumeItem{\textbf{Best EduTech Class Award}, POSTECH, \emph{Awarded to the one online class among 480 classes}, Nov. 2021}
