--- a/source/latex/publication.tex
+++ b/source/latex/publication.tex
@@ -2,6 +2,7 @@
 
 International
 \resumePublicationListStart
+    \publicationItem{Jinhwi Lee, Jungtaek Kim, Hyunsoo Chung, \textbf{Jaesik Park}, and Minsu Cho}{Learning to Assemble Geometric Shapes}{International Joint Conference on Artificial Intelligence (\textbf{IJCAI}), 2022}{}
     \publicationItem{Hyunmin Lee and \textbf{Jaesik Park}}{Instance-wise Occlusion and Depth Orders in Natural Scenes}{International Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}), 2022}{}
     \publicationItem{Chunghyun Park, Yoonwoo Jeong, Minsu Cho, and \textbf{Jaesik Park}}{Fast Point Transformer}{International Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}), 2022}{}
     \publicationItem{Jaebong Jeong, Janghun Jo, Sunghyun Cho, and \textbf{Jaesik Park}}{3D Scene Painting via Semantic Image Synthesis}{International Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}), 2022}{}
