eccv2022 accepted papers

--- a/source/latex/publication.tex
+++ b/source/latex/publication.tex
@@ -2,6 +2,10 @@
 
 International
 \resumePublicationListStart
+    \publicationItem{Juyong Lee, Seokjun Ahn, and \textbf{Jaesik Park}}{Style-Agnostic Reinforcement Learning}{European Conference on Computer Vision (\textbf{ECCV}), 2022}{}
+    \publicationItem{Jaesung Choe*, Chunghyun Park*, Francois Rameau, \textbf{Jaesik Park}, and In So Kweon}{PointMixer: MLP-Mixer for Point Cloud Understanding}{European Conference on Computer Vision (\textbf{ECCV}), 2022}{(*Equal contribution)}
+    \publicationItem{Jaewon Kam, Jungeon Kim, Soongjin Kim, \textbf{Jaesik Park}, and Seungyong Lee}{CostDCNet: Cost Volume based Depth Completion of Single RGB-D Images}{European Conference on Computer Vision (\textbf{ECCV}), 2022}{}
+    \publicationItem{MinGuk Kang, Joonghyuk Shin, and \textbf{Jaesik Park}}{StudioGAN: A Taxonomy and Benchmark of GANs for Image Synthesis}{2206.09479 (arXiv), 2022}{}
     \publicationItem{Jinhwi Lee, Jungtaek Kim, Hyunsoo Chung, \textbf{Jaesik Park}, and Minsu Cho}{Learning to Assemble Geometric Shapes}{International Joint Conference on Artificial Intelligence (\textbf{IJCAI}), 2022}{}
     \publicationItem{Hyunmin Lee and \textbf{Jaesik Park}}{Instance-wise Occlusion and Depth Orders in Natural Scenes}{International Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}), 2022}{}
     \publicationItem{Chunghyun Park, Yoonwoo Jeong, Minsu Cho, and \textbf{Jaesik Park}}{Fast Point Transformer}{International Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}), 2022}{}
@@ -10,7 +14,6 @@ International
     \publicationItem{Jaesung Choe, Byeongin Joung, Francois Rameau, \textbf{Jaesik Park}, and In So Kweon}{Deep Point Cloud Reconstruction}{International Conference on Learning Representations (\textbf{ICLR}), 2022}{}
     \publicationItem{Jae Shin Yoon, Zhixuan Yu, \textbf{Jaesik Park}, and Hyun Soo Park}{HUMBI: A Large Multiview Dataset of Human Body Expressions and Benchmark Challenge}{Transactions on Pattern Analysis and Machine Intelligence (\textbf{TPAMI}), 2021}{}
     \publicationItem{Junha Lee, Christopher Choy, and \textbf{Jaesik Park}}{Putting 3D Spatially Sparse Networks on a Diet}{2112.01316 (arXiv), 2021}{}
-    \publicationItem{Jaesung Choe*, Chunghyun Park*, Francois Rameau, \textbf{Jaesik Park}, and In So Kweon}{PointMixer: MLP-Mixer for Point Cloud Understanding}{2111.11187 (arXiv), 2021}{(*Equal contribution)}
     \publicationItem{Wei Dong*, Kwonyoung Ryu*, Michael Kaess, and \textbf{Jaesik Park}}{Revisiting LiDAR Registration and Reconstruction: A Range Image Perspective}{2112.02779 (arXiv), 2021}{(*Equal contribution)}
     \publicationItem{Jinsoo Choi, \textbf{Jaesik Park}, and In So Kweon}{Self-Supervised Real-time Video Stabilization}{British Machine Vision Conference (\textbf{BMVC}), 2021}{}
     \publicationItem{Minguk Kang, Woohyeon Shim, Minsu Cho, and \textbf{Jaesik Park}}{Rebooting ACGAN: Auxiliary Classifier GANs with Stable Training}{Conference on Neural Information Processing Systems (\textbf{NeurIPS}), 2021}{}
