webpage for scenecoloring

--- a/source/latex/publication.tex
+++ b/source/latex/publication.tex
@@ -4,7 +4,7 @@ International
 \resumePublicationListStart
     \publicationItem{Juyong Lee, Seokjun Ahn, and \textbf{Jaesik Park}}{Style-Agnostic Reinforcement Learning}{European Conference on Computer Vision (\textbf{ECCV}), 2022}{}
     \publicationItem{Jaesung Choe*, Chunghyun Park*, Francois Rameau, \textbf{Jaesik Park}, and In So Kweon}{PointMixer: MLP-Mixer for Point Cloud Understanding}{European Conference on Computer Vision (\textbf{ECCV}), 2022}{(*Equal contribution)}
-    \publicationItem{Jaewon Kam, Jungeon Kim, Soongjin Kim, \textbf{Jaesik Park}, and Seungyong Lee}{CostDCNet: Cost Volume based Depth Completion of Single RGB-D Images}{European Conference on Computer Vision (\textbf{ECCV}), 2022}{}
+    \publicationItem{Jaewon Kam, Jungeon Kim, Soongjin Kim, \textbf{Jaesik Park}, and Seungyong Lee}{CostDCNet: Cost Volume based Depth Completion for a Single RGB-D Image}{European Conference on Computer Vision (\textbf{ECCV}), 2022}{}
     \publicationItem{MinGuk Kang, Joonghyuk Shin, and \textbf{Jaesik Park}}{StudioGAN: A Taxonomy and Benchmark of GANs for Image Synthesis}{2206.09479 (arXiv), 2022}{}
     \publicationItem{Jinhwi Lee, Jungtaek Kim, Hyunsoo Chung, \textbf{Jaesik Park}, and Minsu Cho}{Learning to Assemble Geometric Shapes}{International Joint Conference on Artificial Intelligence (\textbf{IJCAI}), 2022}{}
     \publicationItem{Hyunmin Lee and \textbf{Jaesik Park}}{Instance-wise Occlusion and Depth Orders in Natural Scenes}{International Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}), 2022}{}
