--- a/source/latex/program_committe.tex
+++ b/source/latex/program_committe.tex
@@ -1,5 +1,6 @@
 \section{Program Committee}
 \resumeItemListStart
+    \resumeItem{\textbf{Associate Editor}, International Conference on Robotics and Automation (\textbf{ICRA}),  2023}
     \resumeItem{\textbf{Area Chair}, European Conference on Computer Vision (\textbf{ECCV}),  2022}
     \resumeItem{\textbf{Associate Editor}, IEEE International Conference on Robotics and Automation (\textbf{ICRA}),  2022}
     \resumeItem{Senior Program Committee, American Assoc. for Artificial Intelligence (\textbf{AAAI}),  2022}
