--- a/source/latex/cv_skeleton.tex
+++ b/source/latex/cv_skeleton.tex
@@ -122,22 +122,25 @@
 \section{Working Experiences}
   \resumeSubHeadingListStart
     \resumeSubheading
+      {Associate Professor}{Pohang, Republic of Korea}
+      {Pohang University of Science and Technology \textnormal{(\textbf{POSTECH})}}{Sep. 2022 -- Present}
+      \resumeItemListStart
+      \resumeItem{Co-principal investigator of Computer Vision Lab.}
+      \resumeItem{Advising about 20 masters and Ph.D. students}
+      \resumeItem{Selected as one of the \textbf{POSTECH's Representative Research Achievements} (2021)}
+      \resumeItem{Received \textbf{Outstanding Online Class award} (2020) and \textbf{the Best EduTech award} (2021)}
+      \resumeItem{3D scene reconstruction, understanding, and assembly projects}
+      \resumeItem{Proposed novel image generation pipelines: \textbf{StudioGAN} project (2.9k GitHub stars)}
+      \resumeItem{5.4k Google Scholar citations}
+    \resumeItemListEnd
+    \resumeSubheading
       {Assistant Professor}{Pohang, Republic of Korea}
-      {Pohang University of Science and Technology \textnormal{(\textbf{POSTECH})}}{April. 2019 -- Present}
-        \resumeItemListStart
-          \resumeItem{Co-principal investigator of Computer Vision Lab.}
-          \resumeItem{Advising about 20 masters and Ph.D. students}
-          \resumeItem{Selected as one of the \textbf{POSTECH's Representative Research Achievements} (2021)}
-          \resumeItem{Received \textbf{Outstanding Online Class award} (2020) and \textbf{the Best EduTech award} (2021)}
-          \resumeItem{3D scene reconstruction, understanding, and assembly projects}
-          \resumeItem{Proposed novel image generation pipelines: \textbf{StudioGAN} project (2.7k GitHub stars)}
-          \resumeItem{5.1k Google Scholar citations}
-        \resumeItemListEnd
+      {Pohang University of Science and Technology \textnormal{(\textbf{POSTECH})}}{April. 2019 -- Aug. 2022}
     \resumeSubheading
       {Staff Research Scientist}{Santa Clara, CA, USA}
       {Intelligent Systems Lab, Intel (Manager: Dr. Vladlen Koltun)}{Dec. 2015 -- March 2019}
         \resumeItemListStart
-          \resumeItem{\textbf{Co-founder of Open3D}: open-sourced 3D vision library, built from scratch (7.0k GitHub stars)}
+          \resumeItem{\textbf{Co-founder of Open3D}: open-sourced 3D vision library, built from scratch (7.3k GitHub stars)}
           \resumeItem{Tanks and Temples: an online evaluation system for photogrametry methods}
           \resumeItem{High quality 3D reconstruction approaches}
           \resumeItem{Geometry understanding: tangent convolutions and fully convolutional geometric features}
