--- a/source/latex/cv_skeleton.tex
+++ b/source/latex/cv_skeleton.tex
@@ -114,47 +114,43 @@
 
 \begin{center}
     \textbf{\Huge \scshape Jaesik Park} \\ \vspace{3pt}
-    \small \href{mailto:jaesik.park@postech.ac.kr}{\underline{jaesik.park@postech.ac.kr}} $|$ 
+    \small \href{mailto:jaesik.park@snu.ac.kr}{\underline{jaesik.park@snu.ac.kr}} $|$ 
     \href{http://jaesik.info}{\underline{jaesik.info}}\\
-    \footnotesize{Chungam-Ro 77, POSTECH, Pohang-Si, Republic of Korea (37673)}
+    \footnotesize{1 Gwanak-ro, Gwanak-gu, Seoul, Republic of Korea (08826)}
 \end{center}
 
 \section{Working Experiences}
   \resumeSubHeadingListStart
     \resumeSubheading
+      {Assistant Professor}{Seoul, Republic of Korea}
+      {Seoul National University}{Sep. 2023 -- Present}
+    \resumeSubheading
       {Associate Professor}{Pohang, Republic of Korea}
-      {Pohang University of Science and Technology \textnormal{(\textbf{POSTECH})}}{Sep. 2022 -- Present}
-      \resumeItemListStart
-      \resumeItem{Co-principal investigator of Computer Vision Lab.}
-      \resumeItem{Advising about 20 masters and Ph.D. students}
-      \resumeItem{Selected as one of the \textbf{POSTECH's Representative Research Achievements} (2021)}
-      \resumeItem{Received \textbf{Outstanding Online Class award} (2020) and \textbf{the Best EduTech award} (2021)}
-      \resumeItem{3D scene reconstruction, understanding, and assembly projects}
-      \resumeItem{Proposed novel image generation pipelines: \textbf{StudioGAN} project (\textbf{3.2k GitHub stars})}
-      \resumeItem{6.9k Google Scholar citations}
-    \resumeItemListEnd
+      {Pohang University of Science and Technology \textnormal{(\textbf{POSTECH})}}{Sep. 2022 -- Aug. 2023}
     \resumeSubheading
       {Assistant Professor}{Pohang, Republic of Korea}
       {Pohang University of Science and Technology \textnormal{(\textbf{POSTECH})}}{April. 2019 -- Aug. 2022}
+      \resumeItemListStart
+        \resumeItem{Advised about 20 masters and Ph.D. students}
+        \resumeItem{Selected as one of the POSTECH's Representative Research Achievements (2021)}
+        \resumeItem{Received Outstanding Online Class Award (2020) and the Best EduTech Award (2021)}
+      \resumeItemListEnd
     \resumeSubheading
       {Staff Research Scientist}{Santa Clara, CA, USA}
       {Intelligent Systems Lab, Intel (Manager: Dr. Vladlen Koltun)}{Dec. 2015 -- March 2019}
         \resumeItemListStart
-          \resumeItem{\textbf{Co-creator of Open3D}: open-sourced 3D vision library that is built from scratch (\textbf{8.6+1.3k GitHub stars})}
-          \resumeItem{Tanks and Temples: an online evaluation system for photogrametry methods}
-          \resumeItem{High quality 3D reconstruction approaches}
-          \resumeItem{Geometry understanding: tangent convolutions and fully convolutional geometric features}
           \resumeItem{Advised intern students from Stanford University, U.C. Berkeley, and Carnegie Melon University}
+          \resumeItem{\textbf{Co-creator of Open3D}: open-sourced 3D vision library that is built from scratch (\textbf{8.6+1.3k GitHub stars})}
         \resumeItemListEnd
     \resumeSubheading
       {Post-Doc. Researcher}{Daejeon, Republic of Korea}
-      {KAIST. Developed color correction algorithms (Mentor: Prof. In So Kweon)}{Aug. 2015 -- Nov. 2015}
+      {KAIST. (Mentor: Prof. In So Kweon)}{Aug. 2015 -- Nov. 2015}
     \resumeSubheading
       {Research Intern}{Redmond, WA, USA}
-      {Microsoft Research. Developed a light calibration technique (Mentor: Dr. Sudipta N. Sinha)}{June 2013 -- Sep. 2013}
+      {Microsoft Research. (Mentor: Dr. Sudipta N. Sinha)}{June 2013 -- Sep. 2013}
     \resumeSubheading
       {Research Intern}{Beijing, China}
-      {Microsoft Research Asia. Multiview photometric stereo system (Mentor: Prof. Y. Matsushita)}{April 2012 -- Oct. 2012}     
+      {Microsoft Research Asia. (Mentor: Prof. Y. Matsushita)}{April 2012 -- Oct. 2012}     
   \resumeSubHeadingListEnd
 
 \section{Education}
