--- a/source/latex/cv_skeleton.tex
+++ b/source/latex/cv_skeleton.tex
@@ -116,7 +116,7 @@
     \textbf{\Huge \scshape Jaesik Park} \\ \vspace{3pt}
     \small \href{mailto:jaesik.park@snu.ac.kr}{\underline{jaesik.park@snu.ac.kr}} $|$ 
     \href{http://jaesik.info}{\underline{jaesik.info}}\\
-    \footnotesize{1 Gwanak-ro, Gwanak-gu, Seoul, Republic of Korea (08826)}
+    \footnotesize{401 Ho, 301 Dong, 1 Gwanak-ro, Gwanak-gu, Seoul, Republic of Korea (08826)}
 \end{center}
 
 \section{Working Experiences}
