--- a/source/latex/cv_skeleton.tex
+++ b/source/latex/cv_skeleton.tex
@@ -123,13 +123,16 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {Assistant Professor}{Seoul, Republic of Korea}
-      {Seoul National University}{Sep. 2023 -- Present}
+      {CSE and IPAI, Seoul National University \textnormal{(\textbf{SNU})}}{Sep. 2023 -- Present}
+      \resumeItemListStart
+        \resumeItem{Principal Investigator of Visual and Geometric Intelligence Lab.}
+      \resumeItemListEnd
     \resumeSubheading
       {Associate Professor}{Pohang, Republic of Korea}
-      {Pohang University of Science and Technology \textnormal{(\textbf{POSTECH})}}{Sep. 2022 -- Aug. 2023}
+      {CSE and GSAI, Pohang University of Science and Technology \textnormal{(\textbf{POSTECH})}}{Sep. 2022 -- Aug. 2023}
     \resumeSubheading
       {Assistant Professor}{Pohang, Republic of Korea}
-      {Pohang University of Science and Technology \textnormal{(\textbf{POSTECH})}}{April. 2019 -- Aug. 2022}
+      {CSE and GSAI, Pohang University of Science and Technology \textnormal{(\textbf{POSTECH})}}{April. 2019 -- Aug. 2022}
       \resumeItemListStart
         \resumeItem{Advised about 20 masters and Ph.D. students}
         \resumeItem{Selected as one of the POSTECH's Representative Research Achievements (2021)}
@@ -142,15 +145,15 @@
           \resumeItem{Advised intern students from Stanford University, U.C. Berkeley, and Carnegie Melon University}
           \resumeItem{\textbf{Co-creator of Open3D}: open-sourced 3D vision library that is built from scratch (\textbf{8.6+1.3k GitHub stars})}
         \resumeItemListEnd
-    \resumeSubheading
-      {Post-Doc. Researcher}{Daejeon, Republic of Korea}
-      {KAIST. (Mentor: Prof. In So Kweon)}{Aug. 2015 -- Nov. 2015}
-    \resumeSubheading
-      {Research Intern}{Redmond, WA, USA}
-      {Microsoft Research. (Mentor: Dr. Sudipta N. Sinha)}{June 2013 -- Sep. 2013}
-    \resumeSubheading
-      {Research Intern}{Beijing, China}
-      {Microsoft Research Asia. (Mentor: Prof. Y. Matsushita)}{April 2012 -- Oct. 2012}     
+    % \resumeSubheading
+    %   {Post-Doc. Researcher}{Daejeon, Republic of Korea}
+    %   {KAIST (Mentor: Prof. In So Kweon)}{Aug. 2015 -- Nov. 2015}
+    % \resumeSubheading
+    %   {Research Intern}{Redmond, WA, USA}
+    %   {Microsoft Research (Mentor: Dr. Sudipta N. Sinha)}{June 2013 -- Sep. 2013}
+    % \resumeSubheading
+    %   {Research Intern}{Beijing, China}
+    %   {Microsoft Research Asia (Mentor: Prof. Y. Matsushita)}{April 2012 -- Oct. 2012}     
   \resumeSubHeadingListEnd
 
 \section{Education}
@@ -180,6 +183,19 @@
 % ---- AutoGen::funding
 
 % ---- AutoGen::talks
+
+\section{Other Working Experiences}
+  \resumeSubHeadingListStart    
+    \resumeSubheading
+      {Post-Doc. Researcher}{Daejeon, Republic of Korea}
+      {\textnormal{\textbf{KAIST}} (Mentor: Prof. In So Kweon)}{Aug. 2015 -- Nov. 2015}
+    \resumeSubheading
+      {Research Intern}{Redmond, WA, USA}
+      {Microsoft Research \textnormal{(\textbf{MSR})} (Mentor: Dr. Sudipta N. Sinha)}{June 2013 -- Sep. 2013}
+    \resumeSubheading
+      {Research Intern}{Beijing, China}
+      {Microsoft Research Asia \textnormal{(\textbf{MSRA})} (Mentor: Prof. Y. Matsushita)}{April 2012 -- Oct. 2012}     
+  \resumeSubHeadingListEnd
 
 \section{Reference}
   \resumeItemListStart
