--- a/source/latex/cv_skeleton.tex
+++ b/source/latex/cv_skeleton.tex
@@ -143,7 +143,7 @@
       {Intelligent Systems Lab, Intel (Manager: Dr. Vladlen Koltun)}{Dec. 2015 -- March 2019}
         \resumeItemListStart
           \resumeItem{Advised intern students from Stanford University, U.C. Berkeley, and Carnegie Melon University}
-          \resumeItem{\textbf{Co-creator of Open3D}: open-sourced 3D vision library that is built from scratch (\textbf{11.5+1.9k GitHub stars})}
+          \resumeItem{\textbf{Co-creator of Open3D}: open-sourced 3D vision library built from scratch (\textbf{11.5+1.9k GitHub stars})}
         \resumeItemListEnd
     % \resumeSubheading
     %   {Post-Doc. Researcher}{Daejeon, Republic of Korea}
