--- a/source/latex/cv_skeleton.tex
+++ b/source/latex/cv_skeleton.tex
@@ -72,6 +72,12 @@
   }
 }
 
+\newcommand{\publicationItemDomestic}[4]{
+  \small{
+  \item{#1, \emph{#2}, #3 #4 \vspace{-2pt}}
+  }
+}
+
 \newcommand{\resumeSubheading}[4]{
   \vspace{-2pt}\item
     \begin{tabular*}{0.97\textwidth}[t]{l@{\extracolsep{\fill}}r}
