--- a/source/latex/cv_skeleton.tex
+++ b/source/latex/cv_skeleton.tex
@@ -168,8 +168,8 @@
       {Ph.D. and M.S. in Electrical Eng.}{Daejeon, Republic of Korea}
       {Korea Advanced Institute of Science and Technology \textnormal{(\textbf{KAIST})}}{Feb. 2009 -- Aug. 2015}
         \resumeItemListStart
-        \resumeItem{Ph.D. thesis: Image-based 3D Modeling via Constrained Optimization (Advisor: Prof. In So Kweon, Co-advisor: Dr. Yu-Wing Tai)}
-        \resumeItem{Master's thesis: Upsampling Low-resolution Image using Heterogeneous High-resolution Image (Advisor: Prof. In So Kweon)}
+        \resumeItem{Ph.D. thesis: Image-based 3D Modeling via Constrained Optimization \\(Advisor: Prof. In So Kweon, Co-advisor: Dr. Yu-Wing Tai)}
+        \resumeItem{Master's thesis: Upsampling Low-resolution Image using Heterogeneous High-resolution Image \\(Advisor: Prof. In So Kweon)}
         \resumeItemListEnd
     \resumeSubheading
       {B.E. in Media Communication Eng.}{Seoul, Republic of Korea}
