--- a/source/latex/cv_skeleton.tex
+++ b/source/latex/cv_skeleton.tex
@@ -166,7 +166,7 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {Ph.D. and M.S. in Electrical Eng.}{Daejeon, Republic of Korea}
-      {Korea Advanced Institute of Science and Technology \textnormal{(\textbf{KAIST})}}{Feb. 2009 -- Aug. 2015}
+      {Korea Advanced Institute of Science and Technology \textnormal{(\textbf{KAIST})}}{Feb. 2009 -- Feb. 2011 \& Feb. 2011 -- Aug. 2015}
         \resumeItemListStart
         \resumeItem{Ph.D. thesis: Image-based 3D Modeling via Constrained Optimization \\(Advisor: Prof. In So Kweon, Co-advisor: Dr. Yu-Wing Tai)}
         \resumeItem{Master's thesis: Upsampling Low-resolution Image using Heterogeneous High-resolution Image \\(Advisor: Prof. In So Kweon)}
