--- a/source/latex/cv_skeleton.tex
+++ b/source/latex/cv_skeleton.tex
@@ -129,16 +129,17 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {Assistant Professor}{Seoul, Republic of Korea}
-      {CSE and IPAI, Seoul National University \textnormal{(\textbf{SNU})}}{Sep. 2023 -- Present}
+      {CSE and IPAI, Seoul National University \textnormal{(\textbf{SNU})}}{2023.09 -- Present}
       \resumeItemListStart
         \resumeItem{Principal Investigator of Visual and Geometric Intelligence Lab.}
+        \resumeItem{Chief Professor of Student Affairs, IPAI (2024.09 -- Present)}
       \resumeItemListEnd
     \resumeSubheading
       {Associate Professor}{Pohang, Republic of Korea}
-      {CSE and GSAI, Pohang University of Science and Technology \textnormal{(\textbf{POSTECH})}}{Sep. 2022 -- Aug. 2023}
+      {CSE and GSAI, Pohang University of Science and Technology \textnormal{(\textbf{POSTECH})}}{2022.09 -- 2023.08}
     \resumeSubheading
       {Assistant Professor}{Pohang, Republic of Korea}
-      {CSE and GSAI, Pohang University of Science and Technology \textnormal{(\textbf{POSTECH})}}{April. 2019 -- Aug. 2022}
+      {CSE and GSAI, Pohang University of Science and Technology \textnormal{(\textbf{POSTECH})}}{2019.04 -- 2022.08}
       \resumeItemListStart
         \resumeItem{Advised about 20 masters and Ph.D. students}
         \resumeItem{Selected as one of the POSTECH's Representative Research Achievements (2021)}
@@ -146,7 +147,7 @@
       \resumeItemListEnd
     \resumeSubheading
       {Staff Research Scientist}{Santa Clara, CA, USA}
-      {Intelligent Systems Lab, Intel (Manager: Dr. Vladlen Koltun)}{Dec. 2015 -- March 2019}
+      {Intelligent Systems Lab, Intel (Manager: Dr. Vladlen Koltun)}{2015.12 -- 2019.03}
         \resumeItemListStart
           \resumeItem{Advised intern students from Stanford University, U.C. Berkeley, and Carnegie Melon University}
           \resumeItem{\textbf{Co-creator of Open3D}: open-sourced 3D vision library built from scratch (\textbf{11.5+1.9k GitHub stars})}
@@ -166,14 +167,14 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {Ph.D. and M.S. in Electrical Eng.}{Daejeon, Republic of Korea}
-      {Korea Advanced Institute of Science and Technology \textnormal{(\textbf{KAIST})}}{Feb. 2009 -- Feb. 2011 \& Feb. 2011 -- Aug. 2015}
+      {Korea Advanced Institute of Science and Technology \textnormal{(\textbf{KAIST})}}{2009.02 -- 2011.02 \& 2011.02 -- 2015.08}
         \resumeItemListStart
         \resumeItem{Ph.D. thesis: Image-based 3D Modeling via Constrained Optimization \\(Advisor: Prof. In So Kweon, Co-advisor: Dr. Yu-Wing Tai)}
         \resumeItem{Master's thesis: Upsampling Low-resolution Image using Heterogeneous High-resolution Image \\(Advisor: Prof. In So Kweon)}
         \resumeItemListEnd
     \resumeSubheading
       {B.E. in Media Communication Eng.}{Seoul, Republic of Korea}
-      {Hanyang University (\textbf{Summa cum laude})}{March. 2005 -- Feb. 2009}
+      {Hanyang University (\textbf{Summa cum laude})}{2005.03 -- 2009.02}
   \resumeSubHeadingListEnd
 
 % ---- AutoGen::publication
