--- a/source/latex/cv_skeleton.tex
+++ b/source/latex/cv_skeleton.tex
@@ -121,7 +121,8 @@
 \begin{center}
     \textbf{\Huge \scshape Jaesik Park} \\ \vspace{3pt}
     \small \href{mailto:jaesik.park@snu.ac.kr}{\underline{jaesik.park@snu.ac.kr}} $|$ 
-    \href{http://jaesik.info}{\underline{jaesik.info}}\\
+    \href{http://jaesik.info}{\underline{jaesik.info}} $|$ 
+    \href{https://scholar.google.com/citations?user=_3q6KBIAAAAJ&hl=en}{\underline{Google Scholar}} \\
     \footnotesize{653 Ho, 303 Dong, 1 Gwanak-ro, Gwanak-gu, Seoul, Republic of Korea (08826)}
 \end{center}
 
