update cv - associate prof.

--- a/source/latex/cv_skeleton.tex
+++ b/source/latex/cv_skeleton.tex
@@ -129,23 +129,26 @@
 \section{Working Experiences}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {Assistant Professor}{Seoul, Republic of Korea}
-      {CSE and IPAI, Seoul National University \textnormal{(\textbf{SNU})}}{2023.09 -- Present}
+      {Associate Professor}{Seoul, Republic of Korea}
+      {CSE and IPAI, Seoul National University \textnormal{(\textbf{SNU})}}{2025.09 -- Present}
       \resumeItemListStart
         \resumeItem{Principal Investigator of Visual and Geometric Intelligence Lab.}
         \resumeItem{Chief Professor of Student Affairs, IPAI (2024.09 -- Present)}
       \resumeItemListEnd
     \resumeSubheading
+      {Assistant Professor}{Seoul, Republic of Korea}
+      {CSE and IPAI, Seoul National University \textnormal{(\textbf{SNU})}}{2023.09 -- 2025.08}
+    \resumeSubheading
       {Associate Professor}{Pohang, Republic of Korea}
       {CSE and GSAI, Pohang University of Science and Technology \textnormal{(\textbf{POSTECH})}}{2022.09 -- 2023.08}
-    \resumeSubheading
-      {Assistant Professor}{Pohang, Republic of Korea}
-      {CSE and GSAI, Pohang University of Science and Technology \textnormal{(\textbf{POSTECH})}}{2019.04 -- 2022.08}
       \resumeItemListStart
         \resumeItem{Advised about 20 masters and Ph.D. students}
         \resumeItem{Selected as one of the POSTECH's Representative Research Achievements (2021)}
         \resumeItem{Received Outstanding Online Class Award (2020) and the Best EduTech Award (2021)}
       \resumeItemListEnd
+    \resumeSubheading
+      {Assistant Professor}{Pohang, Republic of Korea}
+      {CSE and GSAI, Pohang University of Science and Technology \textnormal{(\textbf{POSTECH})}}{2019.04 -- 2022.08}
     \resumeSubheading
       {Staff Research Scientist}{Santa Clara, CA, USA}
       {Intelligent Systems Lab, Intel (Manager: Dr. Vladlen Koltun)}{2015.12 -- 2019.03}
