update associate prof

--- a/source/latex/cv_skeleton.tex
+++ b/source/latex/cv_skeleton.tex
@@ -134,6 +134,7 @@
       \resumeItemListStart
         \resumeItem{Principal Investigator of Visual and Geometric Intelligence Lab.}
         \resumeItem{Chief Professor of Student Affairs, IPAI (2024.09 -- Present)}
+        \resumeItem{Associate Director, Haedong Advanced Engineering Center (2025.05 -- 2026.05)}}
       \resumeItemListEnd
     \resumeSubheading
       {Assistant Professor}{Seoul, Republic of Korea}
